--- a/sample/div.html
+++ b/sample/div.html
@@ -11,5 +11,8 @@
                 Voici un petit bout de texte avec le fond en vert.
             </p>
         </div>
+        <div class="red">
+            autre DIV ici
+        </div>
     </body>
 </html>
